[gd_scene load_steps=2 format=3 uid="uid://bjiaatid3f44j"]

[ext_resource type="Script" path="res://secondary/game_timer_ui/game_timer_ui.gd" id="1_7si3k"]

[node name="GameTimerUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7si3k")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2
alignment = 1

[node name="Panel" type="PanelContainer" parent="Margin/VBox/HBox"]
layout_mode = 2

[node name="Margin" type="MarginContainer" parent="Margin/VBox/HBox/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 5

[node name="VBox" type="VBoxContainer" parent="Margin/VBox/HBox/Panel/Margin"]
layout_mode = 2

[node name="TimerName" type="Label" parent="Margin/VBox/HBox/Panel/Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Осталось времени:"
horizontal_alignment = 1

[node name="TimerInfo" type="Label" parent="Margin/VBox/HBox/Panel/Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "00:00"
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
